src/styles/general.less
/* ... */
.header-top {
  display: flex;
  justify-content: space-between;
  height: 60%;
}

.header-title {
  font-size: 23px;  
  height: 100%;
  width: 50%;
  display: flex;
  padding-left: 30px;
  flex-direction: column;
  color: var(--color_primary_contrast) !important;

  h5 {
    margin-top: 5px;
    margin-bottom: 10px;
  }
  .summit-info{
    display: flex;
    height: 100%;
    align-items: center;
    img {
      height: 100%;
      width: auto;
      margin-right: 10px;
      object-fit: contain;
    }
    h4, h5 {
      margin-top: 5px;
      margin-bottom: 0px;
    }

    .registration-title {
      font-size: 24px;
    }
  }
}

@media not all and (min-resolution:.001dpcm) {
   @supports (-webkit-appearance:none) and (stroke-color:transparent) {
      .header-title--no-logo { 
        margin-top: 10px; 
      } 
  } 
}

.header-title.center {
  text-align: center;
  font-size: 34px;
  padding-top: 50px;
  margin: 0;
}

.header-bottom {
  height: 100%;
  display: flex;
  .header-menu {
    width: 100%;
    display: flex;
    align-self: flex-end;

    nav a {
      color: var(--color_secondary_contrast);
      text-decoration: none;

      &.active {
        border-color: var(--color_primary_contrast);
        color: var(--color_primary_contrast);
      }

      &:hover, &:focus {
        color: var(--color_primary_contrast);
      }
    }
  }
}


.header-user {
  padding-right: 30px;
  .user-menu {  
    display: inline-flex;
    justify-content: flex-end;
    align-items: center;
    padding-bottom: 15px;

    button.login {
      background-color: var(--color_secondary);
      color: var(--color_text_light);

      &:hover, &:active {
        background-color: var(--color_secondary) !important;
      }
    }

    .user-greeting {
      margin-right: 5px;
      color: var(--color_text_light);
    }
    .dropdown-container {
      display: none;
      position: absolute;
      top: 82px;
      background-color: #f9f9f9;
      min-width: 120px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);    
      z-index: 1;
      .dropdown-item button, a {
        color: black;    
        text-decoration: none;
        display: block;
      }
      .dropdown-item button, a {
        color: black;    
        text-decoration: none;
        display: block;
      }
    }        
    &:hover .dropdown-container, &:active .dropdown-container {
      display: flex;
      flex-direction: column;
      .dropdown-item {
        font-size: 12px;
        width: 100%;
        padding: 12px 30px;
        cursor: pointer;
        a {
          border-bottom: none;
          color: #297fca;
        }
        &:hover, &:active {
          background-color: lightgrey;
        }
      }
    }
  }
}


.profile-pic {
  height: 40px;
  width: 40px;
  border: 1px solid #afafaf;
  border-radius: 20px;
  overflow: hidden;
  float: right;
}

.profile-pic img {
  width: 100%;
  height: 100%;
}

.primary-layout {
  margin: 10px 0;
  margin-bottom: 100px;
}

.not-found-summit {
  margin-top: 20px;
  margin-left: 15px;  
  .field-wrapper{
    margin-top: 15px;
    input {
      background-color: @lblue_color_1;
      border-color: @header_lblue_color;
      &::placeholder{
        color: @font_blue_2;
      }
    }
    .css-bg1rzq-control, .css-1szy77t-control {    
      background-color: @lblue_color_1;
      border-color: @header_lblue_color;
      .css-dvua67-singleValue {
        color: @font_blue_2 !important;
      }
      .css-151xaom-placeholder {
        color: @font_blue_2;
      }
    }
  }
}

.step-row {
  font-weight: bold;
  display: flex;
  align-items: baseline;
  div:last-child {
    margin-left: auto;
    font-weight: normal;
  }
}

.guest-layout{
  margin-bottom: 100px;
}

.invalid-hash {
  margin-top: 40px;
  text-align: center;
  padding: 0 20%;
  h3 {
    font-weight: bold;
    margin-bottom: 20px;
    line-height: 1.5em;
  }
  h4 {
    line-height: 1.5em;
    padding: 0 10%;
  }
  p {
    line-height: 1.5em;
  }
  button{
    margin-top: 10px;
    padding: 15px 30px;
  }
}

.guest-complete {
  margin-top: 40px;
  text-align: center;
  padding: 0 20%;
  h3 {
    font-weight: bold;
    margin-bottom: 20px;
    line-height: 1.5em;
    padding: 0 10%;
  }
  h4 {
    line-height: 1.5em;
    padding: 0 10%;
  }
  p {
    line-height: 1.5em;
  }
  button{
    margin: 10px 0 20px;
    padding: 15px 30px;
  }
}

.submit-buttons-wrapper {
  margin-top: 30px;
  text-align: center;
  border-top: 1px solid lightgray;
  padding: 15px;
  position: fixed;
  bottom: 0;
  width: 100%;
  left: 16px;
  background-color: white;

  .continue-btn {
    width: 140px;
    height: 40px;
  }

  .back-btn {
    margin-right: 60px;
    color: @lblue_color_2;

    i {
      margin-right: 5px;
      margin-left: 5px;
    }
  }

  .or {
    margin: 0px 20px;
  }
}

.form-check-label {
  padding-left: 10px !important;
  padding-top: 2px;
  font-weight: 400;
}

.back-button {
  float: left;
}

.export-btn {
  float: right;
}

.not-allowed-page {
  h3 {
    text-align: center;
  }
}

.footer-pagination {
  text-align: center;  
  clear: left;
}

.about-event-wrapper {
  border: 1px solid lightgray;
  margin-top: 20px;
  padding: 0 15px 15px 15px;
  h4 {
    font-weight: bold;
  }
}

.order-info-wrapper {
  border: 1px solid lightgray;
  margin-top: 20px;
  padding: 15px;
  font-weight: bold;
  a {
    line-height: 2em;
    cursor: pointer;
  }
  .cancel {
    color: #da0000;
  }
  .info {
    font-weight: normal;
    h4 {
      font-weight: bold;
    }
    .role-badge {
      text-transform: uppercase;
    }    
  }
  &:empty {
    display: none;
  }
}
/* ... */

